--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "",
+  "name": "@greegko",
   "private": true,
   "scripts": {
     "start": "concurrently npm:web:serve npm:web:type-checking",
     "build": "npm run web:build",
     "web:serve": "npm run serve --prefix packages/web",
     "web:type-checking": "npm run type-checking --prefix packages/web",
-    "web:build": "npm run build --prefix packages/web",
-    "prepare": "for P in packages/*/; do (cd $P && npm run prepare); done"
+    "web:build": "npm run build --prefix packages/web"
   },
   "workspaces": [
     "packages/*"
