adjust module selection

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "@greegko",
   "private": true,
   "scripts": {
-    "start": "concurrently npm:web:serve npm:web:type-checking",
-    "build": "npm run web:build",
+    "start": "concurrently npm:packages:build:watch npm:web:serve npm:web:type-checking",
+    "packages:build": "tsc -b ./packages/core ./packages/credit-system",
+    "packages:build:watch": "tsc -b -w ./packages/core ./packages/credit-system",
+    "build": "npm run packages:build && npm run web:build",
     "web:serve": "npm run serve --prefix packages/web",
     "web:type-checking": "npm run type-checking --prefix packages/web",
     "web:build": "npm run build --prefix packages/web"
