--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -13,6 +13,7 @@
     "moduleResolution": "bundler",
     "removeComments": false,
     "noUnusedLocals": true,
+    "isolatedModules": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
