--- a/packages/credit-system/tsconfig.json
+++ b/packages/credit-system/tsconfig.json
@@ -14,6 +14,7 @@
     "removeComments": false,
     "noUnusedLocals": true,
     "jsx": "preserve",
+    "isolatedModules": true,
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
     "paths": {}
