--- a/packages/plugins/credit-system/tsconfig.json
+++ b/packages/plugins/credit-system/tsconfig.json
@@ -19,5 +19,5 @@
     "types": ["vite/client"],
     "paths": {}
   },
-  "references": [{ "path": "../core" }]
+  "references": [{ "path": "../../../core" }]
 }
