--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "concurrently npm:plugins:build:watch npm:web:serve npm:web:type-checking",
     "plugins:build": "tsc -b ./packages/core ./packages/plugins/*",
     "plugins:build:watch": "tsc -b -w ./packages/core ./packages/plugins/*",
-    "build": "npm run packages:build && npm run web:build",
+    "build": "npm run plugins:build && npm run web:build",
     "web:serve": "npm run serve --prefix packages/web -- --host",
     "web:type-checking": "npm run type-checking --prefix packages/web",
     "web:build": "npm run build --prefix packages/web"
