restore ftp server name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ftp://185.166.188.213
+          server: ftp://greegko.com
           username: u584298536
           password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
           local-dir: ./packages/web/dist
