--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,10 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 9
-      - run: cd ./packages/${{ matrix.project.path }}
       - run: pnpm install
+        working-directory: ./packages/${{ matrix.project.path }}
       - run: pnpm build
+        working-directory: ./packages/${{ matrix.project.path }}
 
       - name: push cv to ftp
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
@@ -25,5 +26,5 @@ jobs:
           server: ${{ secrets.HOSTINGER_FTP_HOST }}
           username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
           password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
-          local-dir: ./dist
+          local-dir: ./packages/${{ matrix.project.path }}/dist
           server-dir: ./${{ matrix.project.url }}
