--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,5 @@ jobs:
           server: ${{ secrets.HOSTINGER_FTP_HOST }}
           username: ${{ secrets.HOSTINGER_FTP_USERNAME }}
           password: ${{ secrets.HOSTINGER_FTP_PASSWORD }}
-          local-dir: ./packages/${{ matrix.project.path }}/dist
+          local-dir: ./packages/${{ matrix.project.path }}/dist/
           server-dir: ./${{ matrix.project.url }}
